# seen-places

./: .air.toml  .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  sqlc.yaml
broker/: transport.go
cmd/: dbSaver.go  root.go  s3Observer.go  serveStatic.go  server.go
commonFlags/: flags.go
db/migrations/: 20231110221117_init.down.sql  20231110221117_init.up.sql
db/queries/: data_sources.sql  points.sql
formatHandlers/garmin/: .air.toml  .dockerignore  Dockerfile  pyproject.toml
formatHandlers/garmin/garmin_format_handler/: handler.py  logger.py  main.py  processing.py  settings.py
formatHandlers/garmin/garmin_format_handler/proto/: __init__.pyi  events_pb2.py  events_pb2.pyi
formatHandlers/gopro/: .eslintrc.js  Dockerfile  package-lock.json  package.json
formatHandlers/gopro/src/: dataHandling.ts  index.ts  settings.ts  tansport.ts
formatHandlers/gopro/src/proto/: events.ts
formats/: checker.go
hack/: create_bucket.sh  make_migrations.sh
proto/: events.proto
protogo/: events.pb.go
queries/: copyfrom.go  data_sources.sql.go  db.go  models.go  points.sql.go
server/: dataSources.go  geo.go  root.go  server.go  templates.go
storage/: db.go  s3.go
templates/: dataSourceEls.tmpl  index.html  index.tmpl
utils/: dates.go  frontend.go  hash.go  query.go
