[tool.poetry]
name = "garmin-format-handler"
version = "0.1.0"
description = ""
authors = ["Sebastian Banaszkiewicz <banaszkiewicz.sebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
protoletariat = "^3.2.19"
grpcio-tools = "^1.59.2"
grpcio = "^1.59.2"
garmin-fit-sdk = "^21.115.2"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_handler = 'garmin_format_handler.main:run'
